Vendor inventory added in Estimate